# thu-course-crawler

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  config.py  crawl_course.py  crawl_course_info.py  crawl_departments.py  crawl_schedule.py  db.py  main.py  pyproject.toml
.github/workflows/: ci.yml  crawl_course_and_departments.yml  crawl_course_info.yml  crawl_schedule.yml  deploy.yml
utils/: __init__.py  course_utils.py  dataframe_time_utils.py  dataframe_utils.py  datetime_to_timestamp.py  logger.py
