[project]
name = "thu-course-crawler"
version = "0.1.0"
description = "THU Course Crawler - A tool for crawling course information from Tunghai University"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.13.2",
    "beautifulsoup4>=4.13.4",
    "pandas>=2.3.1",
    "pymongo>=4.14.0",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.2.0",
]

[dependency-groups]
dev = []
